# desktop

./: .gitignore  AGENTS.md  Cargo.toml  README.md  Taskfile.yml  pnpm-lock.yaml
apps/ui/src/: App.tsx
apps/ui/src/pages/: AlertPage.tsx  AvatarPage.tsx  BadgePage.tsx  ButtonPage.tsx  CardPage.tsx  CheckboxPage.tsx  InputPage.tsx  shared.tsx
apps/web/server/: Cargo.toml
apps/web/server/src/: app_state.rs  bootstrap.rs  config.rs  error.rs  main.rs  routes.rs
apps/web/server/src/handlers/: agents.rs  health.rs  mod.rs  projects.rs  skills.rs  task_diffs.rs  tasks.rs
apps/web/server/src/service/: agent.rs  mod.rs  skill.rs  task.rs  task_diff.rs  task_worktree.rs
crates/application/: Cargo.toml
crates/application/src/: error.rs  lib.rs
crates/application/src/agent_definition/: handlers.rs  id_generator.rs  mapper.rs  mod.rs  ports.rs  tests.rs
crates/application/src/project/: handlers.rs  ports.rs  tests.rs
crates/application/src/session/: handlers.rs  mapper.rs  tests.rs
crates/application/src/skill/: handlers.rs  id_generator.rs  mapper.rs  mod.rs  ports.rs  tests.rs
crates/application/src/task/: handlers.rs  mod.rs  ports.rs  tests.rs  worktree_provisioner.rs
crates/application/src/task_diff/: anchor.rs  git_reader.rs  handlers.rs  id_generator.rs  mapper.rs  mod.rs  ports.rs  tests.rs
crates/contracts/src/: agent.rs  frontend.rs  lib.rs  skill.rs  task_diff.rs
crates/db/: Cargo.toml
crates/db/src/: bootstrap.rs  lib.rs  location.rs  repository_tests.rs  tests.rs
crates/db/src/migration/: catalog.rs  mod.rs  runner.rs  schema_v0004.rs  schema_v0005.rs  schema_v0006.rs
crates/db/src/repository/: agent_definition.rs  connection.rs  mod.rs  project.rs  session.rs  skill.rs  task_diff_comment.rs  worktree.rs
crates/domain/: Cargo.toml
crates/domain/src/: error.rs  ids.rs  lib.rs  session.rs  task_diff_comment.rs  tests.rs  worktree.rs
crates/gitlancer/: Cargo.toml
crates/gitlancer/src/: error.rs  lib.rs
crates/gitlancer/src/domain/: paths.rs  refs.rs  repo.rs  worktree.rs
crates/gitlancer/src/exec/: env.rs  runner.rs
crates/gitlancer/src/git/: branch.rs  commit.rs  diff.rs  mod.rs  repository.rs  status.rs  worktree.rs
crates/gitlancer/src/parse/: commit.rs  status.rs  worktree.rs
crates/gitlancer/tests/: git_runtime.rs  parse_behaviors.rs  runner_runtime.rs
crates/logging/: Cargo.toml
crates/logging/src/: config.rs  correlation.rs  error.rs  file_output.rs  formatter.rs  guard.rs  init.rs  lib.rs  macros.rs  method_name.rs  tests.rs
crates/process/src/: lib.rs  tokio_process.rs  tree.rs
crates/process/tests/: process.rs
docs/: application-contracts.md  database-migrations.md  gitlancer-architecture.md  runtime-logging.md  schema.sql  task-worktree-gitlancer-frontend-flow.md  web-server-runtime.md
openspec/changes/archive/2026-05-09-add-logging-module/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-16-sync-project-env-to-db/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-19-newtype-session-agent-id/: design.md  proposal.md  tasks.md
openspec/changes/restructure-web-server-backend/: design.md  proposal.md  tasks.md
openspec/changes/restructure-web-server-backend/specs/web-server-runtime/: spec.md
openspec/specs/application-handlers/: spec.md
openspec/specs/database-migrations/: spec.md
openspec/specs/database-repositories/: spec.md
openspec/specs/domain-models/: spec.md
openspec/specs/git-runtime-operations/: spec.md
openspec/specs/structured-logging/: spec.md
openspec/specs/task-worktree-provisioning/: spec.md
openspec/specs/web-server-runtime/: spec.md
xtask/src/: export_contracts.rs
(+7 files in other folders)
