[package]
name = "ora-application"
version.workspace = true
edition.workspace = true

[lib]
name = "ora_application"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
gitlancer = { workspace = true }
ora-contracts = { workspace = true }
ora-domain = { workspace = true }
ora-logging = { workspace = true }
ora-pty = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tokio-util = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tracing-subscriber = { workspace = true }
