[package]
name = "ora-domain"
version.workspace = true
edition.workspace = true

[lib]
name = "ora_domain"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
serde_json = { workspace = true }
