[package]
name = "ora-web-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "ora_web_server"
path = "src/main.rs"

[dependencies]
ora-application = { workspace = true }
ora-contracts = { workspace = true }
ora-domain = { workspace = true }
ora-logging = { workspace = true }
thiserror = { workspace = true }
