[package]
name = "ora-web-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "ora_web_server"
path = "src/main.rs"

[dependencies]
axum = "0.8"
ora-application = { workspace = true }
ora-contracts = { workspace = true }
ora-domain = { workspace = true }
ora-logging = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread"] }
tracing = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
serde_json = { workspace = true }
tower = { version = "0.5", features = ["util"] }
